--- a/eurekaServer.properties
+++ b/eurekaServer.properties
@@ -1,4 +1,4 @@
 server.port=8761
-spring.application.name=eurekaserver
+spring.application.name=eurekaServer
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
