--- a/inventory_service.properties
+++ b/inventory_service.properties
@@ -1,1 +1,6 @@
-
+server.port=8084
+spring.application.name=inventory_service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.datasource.url=jdbc:mysql://inventory-db:3306/inventory_service
+spring.datasource.username=root
+spring.datasource.password=Cillian8539*
