--- a/payment_service.properties
+++ b/payment_service.properties
@@ -1,1 +1,6 @@
-
+server.port=8081
+spring.application.name=payment_service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.datasource.url=jdbc:mysql://order-db:3306/payment_service
+spring.datasource.username=root
+spring.datasource.password=Cillian8539*
